# jalshi

./: .env.example  .env_model  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: security-scan.yml
scripts/: run_backtest.py
src/: __init__.py
src/api/: __init__.py  auth.py  client.py  rate_limiter.py
src/core/: __init__.py  config.py  safety.py
src/model/: README.md  __init__.py  btc_analyzer.py  strategy.py
src/trading/: __init__.py  executor.py
tests/: __init__.py  conftest.py
